@@ -1,3 +1,10 @@
+2014-06-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libgfortran/61499
+	* io/list_read.c (eat_spaces): Use a 'for' loop instead of
+	'while' loop to skip the loop if there are no bytes left in the
+	string. Only seek if actual spaces can be skipped.
+
 2014-06-25  Tobias Burnus  <burnus@net-b.de>
 
 	* caf/single.c (assign_char4_from_char1, assign_char1_from_char4,
